deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shiling
  labels:
    app.kubernetes.io/name: shiling
