deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiling
  namespace: shiling
  labels:
    app.kubernetes.io/name: shiling
spec:
  type: ClusterIP
  selector:
    app: shiling
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
